--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "h446-03-2021-frontend",
+  "main": "app.js",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "electron": "vue-cli-service build && electron ."
   },
   "dependencies": {
     "core-js": "^3.6.5",
